fix for too small social icons

--- a/assets/css/comments.scss
+++ b/assets/css/comments.scss
@@ -334,10 +334,10 @@ body {
 
         &-auth-type {
           position: absolute;
-          bottom: 0;
-          right: 0;
-          width: 7px;
-          height: 7px;
+          bottom: 7px;
+          right: 7px;
+          width: 16px;
+          height: 16px;
           background-size: cover;
           background-repeat: no-repeat;
         }
